--- a/src/SearchEngine.css
+++ b/src/SearchEngine.css
@@ -8,14 +8,14 @@ form {
   padding: 10px 15px;
   border: none;
   border-bottom: 2px solid white;
-  color: rgb(255, 255, 255);
-  background-color: rgb(199, 227, 170);
+  color: white;
+  background-color: transparent;
   outline: none;
+  font-size: 18px;
 }
-.search-btn {
+a.search-btn {
   text-align: center;
-  padding: 5.5px 8px;
-  color: rgb(255, 255, 255);
+  padding: 8px 8px;
   font-size: 20px;
   border-bottom: 2px solid white;
 }
